--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
-asgiref==3.5.0
+asgiref==3.5.2
     # via django
-certifi==2021.10.8
+certifi==2022.5.18.1
     # via
     #   requests
     #   sentry-sdk
@@ -20,7 +20,7 @@ coreschema==0.0.4
     # via
     #   coreapi
     #   drf-yasg
-cryptography==36.0.2
+cryptography==37.0.2
     # via jwcrypto
 datapunt-authorization-django==1.3.2
     # via -r requirements.in
@@ -63,7 +63,7 @@ djangorestframework==3.13.1
     #   drf-yasg
 djangorestframework-csv==2.1.1
     # via drf-amsterdam
-djangorestframework-gis==0.18
+djangorestframework-gis==1.0
     # via -r requirements.in
 djangorestframework-xml==2.0.0
     # via drf-amsterdam
@@ -89,13 +89,13 @@ iso8601==1.0.2
     #   oslo-utils
 itypes==1.2.0
     # via coreapi
-jinja2==3.1.1
+jinja2==3.1.2
     # via coreschema
-jwcrypto==1.0
+jwcrypto==1.3.1
     # via
     #   -r requirements.in
     #   datapunt-authorization-django
-keystoneauth1==4.5.0
+keystoneauth1==4.6.0
     # via python-keystoneclient
 markupsafe==2.1.1
     # via jinja2
@@ -107,7 +107,7 @@ netaddr==0.8.0
     #   oslo-utils
 netifaces==0.11.0
     # via oslo-utils
-openpyxl==3.0.9
+openpyxl==3.0.10
     # via -r requirements.in
 os-service-types==1.7.0
     # via keystoneauth1
@@ -120,7 +120,7 @@ oslo-i18n==5.1.0
     #   python-keystoneclient
 oslo-serialization==4.3.0
     # via python-keystoneclient
-oslo-utils==4.12.2
+oslo-utils==4.13.0
     # via
     #   oslo-serialization
     #   python-keystoneclient
@@ -128,7 +128,8 @@ packaging==21.3
     # via
     #   drf-yasg
     #   oslo-utils
-pbr==5.8.1
+    #   python-keystoneclient
+pbr==5.9.0
     # via
     #   keystoneauth1
     #   os-service-types
@@ -141,15 +142,15 @@ psycopg2-binary==2.9.3
     # via -r requirements.in
 pycparser==2.21
     # via cffi
-pyparsing==3.0.8
+pyparsing==3.0.9
     # via
     #   oslo-utils
     #   packaging
 python-dateutil==2.8.2
     # via dateutils
-python-keystoneclient==4.4.0
+python-keystoneclient==4.5.0
     # via -r requirements.in
-python-swiftclient==3.13.1
+python-swiftclient==4.0.0
     # via -r requirements.in
 pytz==2022.1
     # via
@@ -174,7 +175,7 @@ ruamel-yaml==0.17.21
     # via drf-yasg
 ruamel-yaml-clib==0.2.6
     # via ruamel-yaml
-sentry-sdk==1.5.10
+sentry-sdk==1.5.12
     # via -r requirements.in
 six==1.16.0
     # via
@@ -182,7 +183,6 @@ six==1.16.0
     #   keystoneauth1
     #   python-dateutil
     #   python-keystoneclient
-    #   python-swiftclient
 sqlparse==0.4.2
     # via django
 stevedore==3.5.0
@@ -200,7 +200,7 @@ urllib3==1.26.9
     # via
     #   requests
     #   sentry-sdk
-wrapt==1.14.0
+wrapt==1.14.1
     # via
     #   debtcollector
     #   deprecated
