--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -4,7 +4,7 @@
 #
 #    pip-compile --output-file=requirements_dev.txt requirements_dev.in
 #
-asgiref==3.5.0
+asgiref==3.5.2
     # via
     #   -r ./requirements.txt
     #   django
@@ -16,7 +16,7 @@ backcall==0.2.0
     # via ipython
 black==22.3.0
     # via pytest-black
-certifi==2021.10.8
+certifi==2022.5.18.1
     # via
     #   -r ./requirements.txt
     #   requests
@@ -29,7 +29,7 @@ charset-normalizer==2.0.12
     # via
     #   -r ./requirements.txt
     #   requests
-click==8.1.2
+click==8.1.3
     # via
     #   black
     #   pip-tools
@@ -42,9 +42,9 @@ coreschema==0.0.4
     #   -r ./requirements.txt
     #   coreapi
     #   drf-yasg
-coverage[toml]==6.3.2
+coverage[toml]==6.4
     # via pytest-cov
-cryptography==36.0.2
+cryptography==37.0.2
     # via
     #   -r ./requirements.txt
     #   jwcrypto
@@ -84,9 +84,9 @@ django==3.2.13
     #   drf-hal-json
     #   drf-nested-fields
     #   drf-yasg
-django-cors-headers==3.11.0
+django-cors-headers==3.12.0
     # via -r requirements_dev.in
-django-debug-toolbar==3.2.4
+django-debug-toolbar==3.4.0
     # via -r requirements_dev.in
 django-extensions==3.1.5
     # via -r ./requirements.txt
@@ -106,7 +106,7 @@ djangorestframework-csv==2.1.1
     # via
     #   -r ./requirements.txt
     #   drf-amsterdam
-djangorestframework-gis==0.18
+djangorestframework-gis==1.0
     # via -r ./requirements.txt
 djangorestframework-xml==2.0.0
     # via
@@ -134,7 +134,7 @@ executing==0.8.3
     # via stack-data
 factory-boy==3.2.1
     # via -r requirements_dev.in
-faker==13.3.5
+faker==13.12.0
     # via factory-boy
 flake8==4.0.1
     # via pytest-flake8
@@ -150,7 +150,7 @@ iniconfig==1.1.1
     # via pytest
 ipdb==0.13.9
     # via -r requirements_dev.in
-ipython==8.2.0
+ipython==8.4.0
     # via ipdb
 iso8601==1.0.2
     # via
@@ -165,15 +165,15 @@ itypes==1.2.0
     #   coreapi
 jedi==0.18.1
     # via ipython
-jinja2==3.1.1
+jinja2==3.1.2
     # via
     #   -r ./requirements.txt
     #   coreschema
-jwcrypto==1.0
+jwcrypto==1.3.1
     # via
     #   -r ./requirements.txt
     #   datapunt-authorization-django
-keystoneauth1==4.5.0
+keystoneauth1==4.6.0
     # via
     #   -r ./requirements.txt
     #   python-keystoneclient
@@ -200,7 +200,7 @@ netifaces==0.11.0
     # via
     #   -r ./requirements.txt
     #   oslo-utils
-openpyxl==3.0.9
+openpyxl==3.0.10
     # via -r ./requirements.txt
 os-service-types==1.7.0
     # via
@@ -220,7 +220,7 @@ oslo-serialization==4.3.0
     # via
     #   -r ./requirements.txt
     #   python-keystoneclient
-oslo-utils==4.12.2
+oslo-utils==4.13.0
     # via
     #   -r ./requirements.txt
     #   oslo-serialization
@@ -231,11 +231,12 @@ packaging==21.3
     #   drf-yasg
     #   oslo-utils
     #   pytest
+    #   python-keystoneclient
 parso==0.8.3
     # via jedi
 pathspec==0.9.0
     # via black
-pbr==5.8.1
+pbr==5.9.0
     # via
     #   -r ./requirements.txt
     #   keystoneauth1
@@ -251,7 +252,7 @@ pexpect==4.8.0
     # via ipython
 pickleshare==0.7.5
     # via ipython
-pip-tools==6.6.0
+pip-tools==6.6.2
     # via -r requirements_dev.in
 platformdirs==2.5.2
     # via black
@@ -275,14 +276,14 @@ pycparser==2.21
     #   cffi
 pyflakes==2.4.0
     # via flake8
-pygments==2.11.2
+pygments==2.12.0
     # via ipython
-pyparsing==3.0.8
+pyparsing==3.0.9
     # via
     #   -r ./requirements.txt
     #   oslo-utils
     #   packaging
-pytest==7.1.1
+pytest==7.1.2
     # via
     #   -r requirements_dev.in
     #   pytest-black
@@ -305,9 +306,9 @@ python-dateutil==2.8.2
     #   -r ./requirements.txt
     #   dateutils
     #   faker
-python-keystoneclient==4.4.0
+python-keystoneclient==4.5.0
     # via -r ./requirements.txt
-python-swiftclient==3.13.1
+python-swiftclient==4.0.0
     # via -r ./requirements.txt
 pytz==2022.1
     # via
@@ -342,7 +343,7 @@ ruamel-yaml-clib==0.2.6
     # via
     #   -r ./requirements.txt
     #   ruamel-yaml
-sentry-sdk==1.5.10
+sentry-sdk==1.5.12
     # via -r ./requirements.txt
 six==1.16.0
     # via
@@ -351,7 +352,6 @@ six==1.16.0
     #   keystoneauth1
     #   python-dateutil
     #   python-keystoneclient
-    #   python-swiftclient
 sqlparse==0.4.2
     # via
     #   -r ./requirements.txt
@@ -375,7 +375,7 @@ tomli==2.0.1
     #   coverage
     #   pep517
     #   pytest
-traitlets==5.1.1
+traitlets==5.2.2.post1
     # via
     #   ipython
     #   matplotlib-inline
@@ -397,7 +397,7 @@ wcwidth==0.2.5
     # via prompt-toolkit
 wheel==0.37.1
     # via pip-tools
-wrapt==1.14.0
+wrapt==1.14.1
     # via
     #   -r ./requirements.txt
     #   debtcollector
