--- a/requirements.txt
+++ b/requirements.txt
@@ -75,7 +75,7 @@ drf-hal-json==0.10.0
     # via -r requirements.in
 drf-nested-fields==0.9.5
     # via drf-hal-json
-drf-yasg==1.20.0
+drf-yasg==1.21.3
     # via -r requirements.in
 et-xmlfile==1.1.0
     # via openpyxl
@@ -95,7 +95,7 @@ jwcrypto==1.3.1
     # via
     #   -r requirements.in
     #   datapunt-authorization-django
-keystoneauth1==4.6.0
+keystoneauth1==5.0.0
     # via python-keystoneclient
 markupsafe==2.1.1
     # via jinja2
@@ -111,14 +111,14 @@ openpyxl==3.0.10
     # via -r requirements.in
 os-service-types==1.7.0
     # via keystoneauth1
-oslo-config==8.8.0
+oslo-config==9.0.0
     # via python-keystoneclient
 oslo-i18n==5.1.0
     # via
     #   oslo-config
     #   oslo-utils
     #   python-keystoneclient
-oslo-serialization==4.3.0
+oslo-serialization==5.0.0
     # via python-keystoneclient
 oslo-utils==6.0.0
     # via
@@ -147,15 +147,16 @@ pyparsing==3.0.9
     #   packaging
 python-dateutil==2.8.2
     # via dateutils
-python-keystoneclient==4.5.0
+python-keystoneclient==5.0.0
     # via -r requirements.in
-python-swiftclient==4.0.0
+python-swiftclient==4.0.1
     # via -r requirements.in
 pytz==2022.1
     # via
     #   dateutils
     #   django
     #   djangorestframework
+    #   drf-yasg
     #   oslo-serialization
     #   oslo-utils
 pyyaml==6.0
@@ -174,7 +175,7 @@ ruamel-yaml==0.17.21
     # via drf-yasg
 ruamel-yaml-clib==0.2.6
     # via ruamel-yaml
-sentry-sdk==1.6.0
+sentry-sdk==1.9.0
     # via -r requirements.in
 six==1.16.0
     # via
@@ -184,7 +185,7 @@ six==1.16.0
     #   python-keystoneclient
 sqlparse==0.4.2
     # via django
-stevedore==3.5.0
+stevedore==4.0.0
     # via
     #   keystoneauth1
     #   oslo-config
@@ -195,7 +196,7 @@ uritemplate==4.1.1
     # via
     #   coreapi
     #   drf-yasg
-urllib3==1.26.10
+urllib3==1.26.11
     # via
     #   requests
     #   sentry-sdk
