--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -10,7 +10,7 @@ asgiref==3.5.2
     #   django
 asttokens==2.0.5
     # via stack-data
-attrs==21.4.0
+attrs==22.1.0
     # via pytest
 backcall==0.2.0
     # via ipython
@@ -44,7 +44,7 @@ coreschema==0.0.4
     #   -r ./requirements.txt
     #   coreapi
     #   drf-yasg
-coverage[toml]==6.4.1
+coverage[toml]==6.4.2
     # via pytest-cov
 cryptography==37.0.4
     # via
@@ -126,19 +126,19 @@ drf-nested-fields==0.9.5
     # via
     #   -r ./requirements.txt
     #   drf-hal-json
-drf-yasg==1.20.0
+drf-yasg==1.21.3
     # via -r ./requirements.txt
 et-xmlfile==1.1.0
     # via
     #   -r ./requirements.txt
     #   openpyxl
-executing==0.8.3
+executing==0.9.1
     # via stack-data
 factory-boy==3.2.1
     # via -r requirements_dev.in
-faker==13.15.0
+faker==13.15.1
     # via factory-boy
-flake8==4.0.1
+flake8==5.0.1
     # via pytest-flake8
 idna==3.3
     # via
@@ -175,7 +175,7 @@ jwcrypto==1.3.1
     # via
     #   -r ./requirements.txt
     #   datapunt-authorization-django
-keystoneauth1==4.6.0
+keystoneauth1==5.0.0
     # via
     #   -r ./requirements.txt
     #   python-keystoneclient
@@ -185,7 +185,7 @@ markupsafe==2.1.1
     #   jinja2
 matplotlib-inline==0.1.3
     # via ipython
-mccabe==0.6.1
+mccabe==0.7.0
     # via flake8
 msgpack==1.0.4
     # via
@@ -208,7 +208,7 @@ os-service-types==1.7.0
     # via
     #   -r ./requirements.txt
     #   keystoneauth1
-oslo-config==8.8.0
+oslo-config==9.0.0
     # via
     #   -r ./requirements.txt
     #   python-keystoneclient
@@ -218,7 +218,7 @@ oslo-i18n==5.1.0
     #   oslo-config
     #   oslo-utils
     #   python-keystoneclient
-oslo-serialization==4.3.0
+oslo-serialization==5.0.0
     # via
     #   -r ./requirements.txt
     #   python-keystoneclient
@@ -248,7 +248,7 @@ pbr==5.9.0
     #   oslo-serialization
     #   python-keystoneclient
     #   stevedore
-pep517==0.12.0
+pep517==0.13.0
     # via build
 pexpect==4.8.0
     # via ipython
@@ -270,13 +270,13 @@ pure-eval==0.2.2
     # via stack-data
 py==1.11.0
     # via pytest
-pycodestyle==2.8.0
+pycodestyle==2.9.0
     # via flake8
 pycparser==2.21
     # via
     #   -r ./requirements.txt
     #   cffi
-pyflakes==2.4.0
+pyflakes==2.5.0
     # via flake8
 pygments==2.12.0
     # via ipython
@@ -308,9 +308,9 @@ python-dateutil==2.8.2
     #   -r ./requirements.txt
     #   dateutils
     #   faker
-python-keystoneclient==4.5.0
+python-keystoneclient==5.0.0
     # via -r ./requirements.txt
-python-swiftclient==4.0.0
+python-swiftclient==4.0.1
     # via -r ./requirements.txt
 pytz==2022.1
     # via
@@ -318,6 +318,7 @@ pytz==2022.1
     #   dateutils
     #   django
     #   djangorestframework
+    #   drf-yasg
     #   oslo-serialization
     #   oslo-utils
 pyyaml==6.0
@@ -345,7 +346,7 @@ ruamel-yaml-clib==0.2.6
     # via
     #   -r ./requirements.txt
     #   ruamel-yaml
-sentry-sdk==1.6.0
+sentry-sdk==1.9.0
     # via -r ./requirements.txt
 six==1.16.0
     # via
@@ -361,7 +362,7 @@ sqlparse==0.4.2
     #   django-debug-toolbar
 stack-data==0.3.0
     # via ipython
-stevedore==3.5.0
+stevedore==4.0.0
     # via
     #   -r ./requirements.txt
     #   keystoneauth1
@@ -393,7 +394,7 @@ uritemplate==4.1.1
     #   -r ./requirements.txt
     #   coreapi
     #   drf-yasg
-urllib3==1.26.10
+urllib3==1.26.11
     # via
     #   -r ./requirements.txt
     #   requests
