--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -8,7 +8,7 @@ asgiref==3.5.2
     # via
     #   -r ./requirements.txt
     #   django
-asttokens==2.0.8
+asttokens==2.1.0
     # via stack-data
 attrs==22.1.0
     # via pytest
@@ -16,7 +16,7 @@ backcall==0.2.0
     # via ipython
 black==22.10.0
     # via pytest-black
-build==0.8.0
+build==0.9.0
     # via pip-tools
 certifi==2022.9.24
     # via
@@ -46,7 +46,7 @@ coreschema==0.0.4
     #   drf-yasg
 coverage[toml]==6.5.0
     # via pytest-cov
-cryptography==38.0.1
+cryptography==38.0.3
     # via
     #   -r ./requirements.txt
     #   jwcrypto
@@ -132,11 +132,13 @@ et-xmlfile==1.1.0
     # via
     #   -r ./requirements.txt
     #   openpyxl
-executing==1.1.1
+exceptiongroup==1.0.2
+    # via pytest
+executing==1.2.0
     # via stack-data
 factory-boy==3.2.1
     # via -r requirements_dev.in
-faker==15.1.1
+faker==15.3.1
     # via factory-boy
 flake8==5.0.4
     # via pytest-flake8
@@ -152,7 +154,7 @@ iniconfig==1.1.1
     # via pytest
 ipdb==0.13.9
     # via -r requirements_dev.in
-ipython==8.5.0
+ipython==8.6.0
     # via ipdb
 iso8601==1.1.0
     # via
@@ -237,7 +239,7 @@ packaging==21.3
     #   python-keystoneclient
 parso==0.8.3
     # via jedi
-pathspec==0.10.1
+pathspec==0.10.2
     # via black
 pbr==5.11.0
     # via
@@ -254,22 +256,20 @@ pexpect==4.8.0
     # via ipython
 pickleshare==0.7.5
     # via ipython
-pip-tools==6.9.0
+pip-tools==6.10.0
     # via -r requirements_dev.in
-platformdirs==2.5.2
+platformdirs==2.5.4
     # via black
 pluggy==1.0.0
     # via pytest
-prompt-toolkit==3.0.31
+prompt-toolkit==3.0.32
     # via ipython
-psycopg2-binary==2.9.4
+psycopg2-binary==2.9.5
     # via -r ./requirements.txt
 ptyprocess==0.7.0
     # via pexpect
 pure-eval==0.2.2
     # via stack-data
-py==1.11.0
-    # via pytest
 pycodestyle==2.9.1
     # via flake8
 pycparser==2.21
@@ -285,7 +285,7 @@ pyparsing==3.0.9
     #   -r ./requirements.txt
     #   oslo-utils
     #   packaging
-pytest==7.1.3
+pytest==7.2.0
     # via
     #   -r requirements_dev.in
     #   pytest-black
@@ -301,7 +301,7 @@ pytest-django==4.5.2
     # via -r requirements_dev.in
 pytest-flake8==1.1.1
     # via -r requirements_dev.in
-pytest-isort==3.0.0
+pytest-isort==3.1.0
     # via -r requirements_dev.in
 python-dateutil==2.8.2
     # via
@@ -312,7 +312,7 @@ python-keystoneclient==5.0.1
     # via -r ./requirements.txt
 python-swiftclient==4.1.0
     # via -r ./requirements.txt
-pytz==2022.5
+pytz==2022.6
     # via
     #   -r ./requirements.txt
     #   dateutils
@@ -360,9 +360,9 @@ sqlparse==0.4.3
     #   -r ./requirements.txt
     #   django
     #   django-debug-toolbar
-stack-data==0.5.1
+stack-data==0.6.1
     # via ipython
-stevedore==4.1.0
+stevedore==4.1.1
     # via
     #   -r ./requirements.txt
     #   keystoneauth1
@@ -399,7 +399,7 @@ urllib3==1.26.12
     #   sentry-sdk
 wcwidth==0.2.5
     # via prompt-toolkit
-wheel==0.37.1
+wheel==0.38.4
     # via pip-tools
 wrapt==1.14.1
     # via
