--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
-asgiref==3.6.0
+asgiref==3.7.2
     # via django
-certifi==2022.12.7
+certifi==2023.5.7
     # via
     #   requests
     #   sentry-sdk
@@ -14,13 +14,7 @@ cffi==1.15.1
     # via cryptography
 charset-normalizer==3.1.0
     # via requests
-coreapi==2.3.3
-    # via drf-yasg
-coreschema==0.0.4
-    # via
-    #   coreapi
-    #   drf-yasg
-cryptography==39.0.2
+cryptography==41.0.1
     # via jwcrypto
 datapunt-authorization-django==1.3.3
     # via -r requirements.in
@@ -35,9 +29,9 @@ debtcollector==2.5.0
     #   python-keystoneclient
 defusedxml==0.7.1
     # via djangorestframework-xml
-deprecated==1.2.13
+deprecated==1.2.14
     # via jwcrypto
-django==3.2.18
+django==3.2.19
     # via
     #   -r requirements.in
     #   datapunt-authorization-django
@@ -47,9 +41,9 @@ django==3.2.18
     #   drf-hal-json
     #   drf-nested-fields
     #   drf-yasg
-django-extensions==3.2.1
+django-extensions==3.2.3
     # via -r requirements.in
-django-filter==22.1
+django-filter==23.2
     # via -r requirements.in
 djangorestframework==3.14.0
     # via
@@ -75,7 +69,7 @@ drf-hal-json==0.10.0
     # via -r requirements.in
 drf-nested-fields==0.9.5
     # via drf-hal-json
-drf-yasg==1.21.5
+drf-yasg==1.21.6
     # via -r requirements.in
 et-xmlfile==1.1.0
     # via openpyxl
@@ -83,22 +77,16 @@ idna==3.4
     # via requests
 inflection==0.5.1
     # via drf-yasg
-iso8601==1.1.0
+iso8601==2.0.0
     # via
     #   keystoneauth1
     #   oslo-utils
-itypes==1.2.0
-    # via coreapi
-jinja2==3.1.2
-    # via coreschema
-jwcrypto==1.4.2
+jwcrypto==1.5.0
     # via
     #   -r requirements.in
     #   datapunt-authorization-django
-keystoneauth1==5.1.2
+keystoneauth1==5.2.1
     # via python-keystoneclient
-markupsafe==2.1.2
-    # via jinja2
 msgpack==1.0.5
     # via oslo-serialization
 netaddr==0.8.0
@@ -124,7 +112,7 @@ oslo-utils==6.1.0
     # via
     #   oslo-serialization
     #   python-keystoneclient
-packaging==23.0
+packaging==23.1
     # via
     #   drf-yasg
     #   oslo-utils
@@ -137,19 +125,19 @@ pbr==5.11.1
     #   oslo-serialization
     #   python-keystoneclient
     #   stevedore
-psycopg2-binary==2.9.5
+psycopg2-binary==2.9.6
     # via -r requirements.in
 pycparser==2.21
     # via cffi
-pyparsing==3.0.9
+pyparsing==3.1.0
     # via oslo-utils
 python-dateutil==2.8.2
     # via dateutils
 python-keystoneclient==5.1.0
     # via -r requirements.in
-python-swiftclient==4.2.0
+python-swiftclient==4.3.0
     # via -r requirements.in
-pytz==2022.7.1
+pytz==2023.3
     # via
     #   dateutils
     #   django
@@ -158,10 +146,11 @@ pytz==2022.7.1
     #   oslo-serialization
     #   oslo-utils
 pyyaml==6.0
-    # via oslo-config
-requests==2.28.2
     # via
-    #   coreapi
+    #   drf-yasg
+    #   oslo-config
+requests==2.31.0
+    # via
     #   datapunt-authorization-django
     #   keystoneauth1
     #   oslo-config
@@ -169,32 +158,27 @@ requests==2.28.2
     #   python-swiftclient
 rfc3986==2.0.0
     # via oslo-config
-ruamel-yaml==0.17.21
-    # via drf-yasg
-ruamel-yaml-clib==0.2.7
-    # via ruamel-yaml
-sentry-sdk==1.17.0
+sentry-sdk==1.26.0
     # via -r requirements.in
 six==1.16.0
     # via
     #   djangorestframework-csv
-    #   keystoneauth1
     #   python-dateutil
     #   python-keystoneclient
-sqlparse==0.4.3
+sqlparse==0.4.4
     # via django
-stevedore==5.0.0
+stevedore==5.1.0
     # via
     #   keystoneauth1
     #   oslo-config
     #   python-keystoneclient
+typing-extensions==4.6.3
+    # via asgiref
 unicodecsv==0.14.1
     # via djangorestframework-csv
 uritemplate==4.1.1
-    # via
-    #   coreapi
-    #   drf-yasg
-urllib3==1.26.15
+    # via drf-yasg
+urllib3==2.0.3
     # via
     #   requests
     #   sentry-sdk
