--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -4,21 +4,19 @@
 #
 #    pip-compile --output-file=requirements_dev.txt requirements_dev.in
 #
-asgiref==3.6.0
+asgiref==3.7.2
     # via
     #   -r ./requirements.txt
     #   django
 asttokens==2.2.1
     # via stack-data
-attrs==22.2.0
-    # via pytest
 backcall==0.2.0
     # via ipython
-black==23.1.0
+black==23.3.0
     # via pytest-black
 build==0.10.0
     # via pip-tools
-certifi==2022.12.7
+certifi==2023.5.7
     # via
     #   -r ./requirements.txt
     #   requests
@@ -35,18 +33,9 @@ click==8.1.3
     # via
     #   black
     #   pip-tools
-coreapi==2.3.3
-    # via
-    #   -r ./requirements.txt
-    #   drf-yasg
-coreschema==0.0.4
-    # via
-    #   -r ./requirements.txt
-    #   coreapi
-    #   drf-yasg
-coverage[toml]==7.2.2
+coverage[toml]==7.2.7
     # via pytest-cov
-cryptography==39.0.2
+cryptography==41.0.1
     # via
     #   -r ./requirements.txt
     #   jwcrypto
@@ -70,11 +59,11 @@ defusedxml==0.7.1
     # via
     #   -r ./requirements.txt
     #   djangorestframework-xml
-deprecated==1.2.13
+deprecated==1.2.14
     # via
     #   -r ./requirements.txt
     #   jwcrypto
-django==3.2.18
+django==3.2.19
     # via
     #   -r ./requirements.txt
     #   datapunt-authorization-django
@@ -86,13 +75,13 @@ django==3.2.18
     #   drf-hal-json
     #   drf-nested-fields
     #   drf-yasg
-django-cors-headers==3.14.0
+django-cors-headers==4.1.0
     # via -r requirements_dev.in
-django-debug-toolbar==3.8.1
+django-debug-toolbar==4.1.0
     # via -r requirements_dev.in
-django-extensions==3.2.1
+django-extensions==3.2.3
     # via -r ./requirements.txt
-django-filter==22.1
+django-filter==23.2
     # via -r ./requirements.txt
 djangorestframework==3.14.0
     # via
@@ -126,7 +115,7 @@ drf-nested-fields==0.9.5
     # via
     #   -r ./requirements.txt
     #   drf-hal-json
-drf-yasg==1.21.5
+drf-yasg==1.21.6
     # via -r ./requirements.txt
 et-xmlfile==1.1.0
     # via
@@ -138,7 +127,7 @@ executing==1.2.0
     # via stack-data
 factory-boy==3.2.1
     # via -r requirements_dev.in
-faker==18.2.0
+faker==18.11.1
     # via factory-boy
 flake8==6.0.0
     # via pytest-flake8
@@ -154,37 +143,25 @@ iniconfig==2.0.0
     # via pytest
 ipdb==0.13.13
     # via -r requirements_dev.in
-ipython==8.11.0
+ipython==8.14.0
     # via ipdb
-iso8601==1.1.0
+iso8601==2.0.0
     # via
     #   -r ./requirements.txt
     #   keystoneauth1
     #   oslo-utils
 isort==5.12.0
     # via pytest-isort
-itypes==1.2.0
-    # via
-    #   -r ./requirements.txt
-    #   coreapi
 jedi==0.18.2
     # via ipython
-jinja2==3.1.2
-    # via
-    #   -r ./requirements.txt
-    #   coreschema
-jwcrypto==1.4.2
+jwcrypto==1.5.0
     # via
     #   -r ./requirements.txt
     #   datapunt-authorization-django
-keystoneauth1==5.1.2
+keystoneauth1==5.2.1
     # via
     #   -r ./requirements.txt
     #   python-keystoneclient
-markupsafe==2.1.2
-    # via
-    #   -r ./requirements.txt
-    #   jinja2
 matplotlib-inline==0.1.6
     # via ipython
 mccabe==0.7.0
@@ -229,7 +206,7 @@ oslo-utils==6.1.0
     #   -r ./requirements.txt
     #   oslo-serialization
     #   python-keystoneclient
-packaging==23.0
+packaging==23.1
     # via
     #   -r ./requirements.txt
     #   black
@@ -255,15 +232,15 @@ pexpect==4.8.0
     # via ipython
 pickleshare==0.7.5
     # via ipython
-pip-tools==6.12.3
+pip-tools==6.13.0
     # via -r requirements_dev.in
-platformdirs==3.1.1
+platformdirs==3.8.0
     # via black
-pluggy==1.0.0
+pluggy==1.2.0
     # via pytest
 prompt-toolkit==3.0.38
     # via ipython
-psycopg2-binary==2.9.5
+psycopg2-binary==2.9.6
     # via -r ./requirements.txt
 ptyprocess==0.7.0
     # via pexpect
@@ -277,15 +254,15 @@ pycparser==2.21
     #   cffi
 pyflakes==3.0.1
     # via flake8
-pygments==2.14.0
+pygments==2.15.1
     # via ipython
-pyparsing==3.0.9
+pyparsing==3.1.0
     # via
     #   -r ./requirements.txt
     #   oslo-utils
 pyproject-hooks==1.0.0
     # via build
-pytest==7.2.2
+pytest==7.4.0
     # via
     #   -r requirements_dev.in
     #   pytest-black
@@ -295,7 +272,7 @@ pytest==7.2.2
     #   pytest-isort
 pytest-black==0.3.12
     # via -r requirements_dev.in
-pytest-cov==4.0.0
+pytest-cov==4.1.0
     # via -r requirements_dev.in
 pytest-django==4.5.2
     # via -r requirements_dev.in
@@ -310,9 +287,9 @@ python-dateutil==2.8.2
     #   faker
 python-keystoneclient==5.1.0
     # via -r ./requirements.txt
-python-swiftclient==4.2.0
+python-swiftclient==4.3.0
     # via -r ./requirements.txt
-pytz==2022.7.1
+pytz==2023.3
     # via
     #   -r ./requirements.txt
     #   dateutils
@@ -324,11 +301,11 @@ pytz==2022.7.1
 pyyaml==6.0
     # via
     #   -r ./requirements.txt
+    #   drf-yasg
     #   oslo-config
-requests==2.28.2
+requests==2.31.0
     # via
     #   -r ./requirements.txt
-    #   coreapi
     #   datapunt-authorization-django
     #   keystoneauth1
     #   oslo-config
@@ -338,31 +315,22 @@ rfc3986==2.0.0
     # via
     #   -r ./requirements.txt
     #   oslo-config
-ruamel-yaml==0.17.21
-    # via
-    #   -r ./requirements.txt
-    #   drf-yasg
-ruamel-yaml-clib==0.2.7
-    # via
-    #   -r ./requirements.txt
-    #   ruamel-yaml
-sentry-sdk==1.17.0
+sentry-sdk==1.26.0
     # via -r ./requirements.txt
 six==1.16.0
     # via
     #   -r ./requirements.txt
     #   djangorestframework-csv
-    #   keystoneauth1
     #   python-dateutil
     #   python-keystoneclient
-sqlparse==0.4.3
+sqlparse==0.4.4
     # via
     #   -r ./requirements.txt
     #   django
     #   django-debug-toolbar
 stack-data==0.6.2
     # via ipython
-stevedore==5.0.0
+stevedore==5.1.0
     # via
     #   -r ./requirements.txt
     #   keystoneauth1
@@ -382,6 +350,10 @@ traitlets==5.9.0
     # via
     #   ipython
     #   matplotlib-inline
+typing-extensions==4.6.3
+    # via
+    #   -r ./requirements.txt
+    #   asgiref
 unicodecsv==0.14.1
     # via
     #   -r ./requirements.txt
@@ -389,9 +361,8 @@ unicodecsv==0.14.1
 uritemplate==4.1.1
     # via
     #   -r ./requirements.txt
-    #   coreapi
     #   drf-yasg
-urllib3==1.26.15
+urllib3==2.0.3
     # via
     #   -r ./requirements.txt
     #   requests
